# cheri_misidioms

code/: bump_alloc_lib.c
code/benchmarks/: CMakeLists.txt
code/benchmarks/barnes/: CMakeLists.txt
code/benchmarks/binary_tree/: CMakeLists.txt
code/benchmarks/cfrac/: CMakeLists.txt
code/benchmarks/espresso/: CMakeLists.txt
code/benchmarks/glibc-bench/: CMakeLists.txt
code/benchmarks/mstress/: CMakeLists.txt
code/benchmarks/richards/: CMakeLists.txt
data/: config.json  get_all.py  graphplot.py  parse_statics.py  requirements.txt
data/allocators/bump_alloc_cheri/: info.json
data/allocators/bump_alloc_nocheri/: info.json
data/allocators/dlmalloc_cheribuild/: info.json
data/allocators/jemalloc/: info.json
data/allocators/libmalloc_simple/: info.json
data/allocators/newlib/: info.json.skip
data/allocators/snmalloc_cheribuild/: info.json
data/allocators/snmalloc_repo/: info.json
